force-app/main/default/objects/I_ST_Lead_Scoring__mdt/I_ST_Lead_Scoring__mdt.object-meta.xml
<CustomObject>
    <description>Key Value pairs which are used to calulate a Lead&apos;s score</description>
    <label>Lead Scoring</label>
    <pluralLabel>Lead Scoring</pluralLabel>
</CustomObject>