force-app/main/default/objects/I_ST_Lead_Scoring__mdt/fields/I_ST_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Field_API_Name__c</fullName>
    <label>Field API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>