force-app/main/default/objects/I_ST_Lead_Scoring__mdt/fields/I_ST_Operator__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Operator__c</fullName>
    <label>Operator</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>