force-app/main/default/objects/I_ST_Lead_Scoring__mdt/fields/I_ST_Score__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Score__c</fullName>
    <label>Score</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>