force-app/main/default/objects/I_ST_Lead_Scoring__mdt/listViews/I_ST_Lead_Scores.listView-meta.xml
<ListView>
    <fullName>I_ST_Lead_Scores</fullName>
    <columns>I_ST_Object__c</columns>
    <columns>I_ST_Field_API_Name__c</columns>
    <columns>I_ST_Operator__c</columns>
    <columns>MasterLabel</columns>
    <columns>I_ST_Score__c</columns>
    <columns>I_ST_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>Lead Scores</label>
    <language>en_US</language>
</ListView>